dataset1235/2025-2/2947369575/users/2667057248/executions/1003782500_3921830315.log
== RUN (2025-08-27 22:40:47)
-- CODE: 
1= float(input())
s= (1*2.86)+50.00
t= s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    1= float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    1= float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    1= float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    1= float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    1= float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    1= float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:42:38)
-- CODE: 
l=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
70.83
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
70.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
70.83
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
70.83
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
70.83
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
70.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:42:32)
-- CODE: 
1=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:49:02)
-- CODE: 
l=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
70.83
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
70.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
70.83
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
70.83
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
70.83
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
70.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:39:06)
-- CODE: 
l = float(input())
s = (1*2.86)+50.00
t = s*(34/100)
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
17.97
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
17.97
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
17.97
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
17.97
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
17.97
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
17.97
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:42:55)
-- CODE: 
l=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
70.83
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
70.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
70.83
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
70.83
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
70.83
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
70.83
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:08)
-- CODE: 
l=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
70.83
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
70.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
70.83
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
70.83
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
70.83
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
70.83
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:49:29)
-- CODE: 
l=float(input())
s=(l*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:39:53)
-- CODE: 
l = float(input())
s = (1*2.86)+50.00
t = s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
70.83
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
70.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
70.83
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
70.83
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
70.83
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
70.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:34)
-- CODE: 
l=float(input())
s=(l*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:46:18)
-- CODE: 
1=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    1=float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:38:02)
-- CODE: 
l = float(input())
s = (1*2.86)+50.00
t = s+(34/100)
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
53.2
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
53.2
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
53.2
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
53.2
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
53.2
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
53.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:39:44)
-- CODE: 
l = float(input())
s = (1*2.86)+50.00
t = s+(s*(34/100)
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    t = s+(s*(34/100)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    t = s+(s*(34/100)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    t = s+(s*(34/100)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    t = s+(s*(34/100)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    t = s+(s*(34/100)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    t = s+(s*(34/100)
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:46:42)
-- CODE: 
l=float(input())
s=(1*2.86)+50.00
t=s+(s*(34/100))
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
70.83
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
70.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
70.83
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
70.83
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
70.83
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
70.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:38:59)
-- CODE: 
1 = float(input())
s = (1*2.86)+50.00
t = s*(34/100)
print(round(t,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
